--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
     </form>
     <div class="loader hidden"></div>
     <div class="gallery gallery-css"></div>
-    <button id="load-more" class="hidden btn">Load more</button>
+    <button id="load-more" class="btn hidden">Load more</button>
   </div>
   <script type="module" src="./main.js"></script>
 </body>
